...
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically,

                content = {

                    mediumTextButton(
                        text = "clear all",
                        onClick = {
                            onClearAll()
                        }
                    )

                    mediumButtonChangingColor(
...
