...
                modifier = Modifier
                    .fillMaxSize()
                    .padding(Dimensions.roundedCornersOfMediumElements)

            ) {

//              This column displays "Name of trackie" and an appropriate hint
                Column(

                    modifier = Modifier
                        .fillMaxWidth()
                        .height(30.dp),

...
